--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
               </div>
     </div>
     </section>
+
+
+    <section>
     <div class="second-banner">
         <div class="flexible-content">
             <h1>Their lives depend on <br> your donation</h1>
@@ -34,15 +37,11 @@
         </div>
         <div class="flexible-content">
             <img src="images/image-1.png" alt="">
-
         </div>
-
     </div>
     <div class="second-banner">
         <div class="flexible-content">
             <img src="images/praying.png" alt="">
-            
-
         </div>
         <div class="flexible-content">
             <h1>Their lives depend on <br> your donation</h1>
@@ -51,12 +50,43 @@
                 
             </p>
             <a class="donate-button" href="">Explore more</a>
-
         </div>
-
     </div>
+    </section>
 
     <section>
+        <div class="heading-third-banner">
+            <h1>Their lives depend on <br>your  donation</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia in asperiores quisquam aliquid, dolorem adipisci minima <br>  sint consequatur consequuntur optio, quidem accusantium non, omnis eius eos voluptatem! Possimus, rerum a!</p>
+        </div>
+        <div class="flexible-container-parent">
+            <div class="flexible-container">
+                <div class="img"><img src="images/Frame.png" alt=""></div>
+            <div class="para">
+                <h2>Direct Help</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente quibusdam dolorem dicta architecto deserunt officia molestias eligendi itaque accusamus, laborum officiis. Culpa placeat, ipsa nobis animi sequi aliquid libero. Deleniti!
+                </p></div></div>
+            <div class="flexible-container">
+                <div class="img"><img src="images/Frame.png" alt=""></div>
+            <div class="para">
+                <h2>Direct Help</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente quibusdam dolorem dicta architecto deserunt officia molestias eligendi itaque accusamus, laborum officiis. Culpa placeat, ipsa nobis animi sequi aliquid libero. Deleniti!
+                </p></div></div>
+        </div>
+        <div class="flexible-container-parent">
+            <div class="flexible-container">
+                <div class="img"><img src="images/Frame.png" alt=""></div>
+            <div class="para">
+                <h2>Direct Help</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente quibusdam dolorem dicta architecto deserunt officia molestias eligendi itaque accusamus, laborum officiis. Culpa placeat, ipsa nobis animi sequi aliquid libero. Deleniti!
+                </p></div></div>
+            <div class="flexible-container">
+                <div class="img"><img src="images/Frame.png" alt=""></div>
+            <div class="para">
+                <h2>Direct Help</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente quibusdam dolorem dicta architecto deserunt officia molestias eligendi itaque accusamus, laborum officiis. Culpa placeat, ipsa nobis animi sequi aliquid libero. Deleniti!
+                </p></div></div>
+        </div>
 
     </section>
   
