--- a/index.html
+++ b/index.html
@@ -89,6 +89,39 @@
         </div>
 
     </section>
+    <section>
+        <div class="one-thrid">
+            <div class="one"><img src="images/morning.png" alt=""></div>
+            <div class="one"><img src="images/morning.png" alt=""></div>
+            <div class="one" ><img src="images/morning.png" alt=""></div>
+        </div>
+    </section>
+
+    <section>
+        <div class="heading-third-banner">
+            <h1>Extend Your Hand of Charity. Earn <br> Rewards for the Hereafter</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia in asperiores quisquam aliquid, dolorem adipisci minima <br>  sint consequatur consequuntur optio, quidem accusantium non, omnis eius eos voluptatem! Possimus, rerum a!</p>
+        </div>
+        <div class="one-thrid">
+            <div class="one zakat"><img src="images/gift.png" alt="">
+            <h2>Zakat Fund</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id provident voluptatem eaque autem, nemo nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet maiores neque exercitationem consequuntur. Maiores harum voluptatibus consequuntur sint delectus quod perspiciatis excepturi totam, illo repudiandae veritatis, rem magni recusandae enim.</p>
+    <a href="">Donate for Zakat</a> </div>
+        <div class="one zakat"><img src="images/gift.png" alt="">
+            <h2>Zakat Fund</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id provident voluptatem eaque autem, nemo nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet maiores neque exercitationem consequuntur. Maiores harum voluptatibus consequuntur sint delectus quod perspiciatis excepturi totam, illo repudiandae veritatis, rem magni recusandae enim.</p><a href="">Donate for Zakat</a>
+    </div>
+        <div class="one zakat"><img src="images/gift.png" alt="">
+            <h2>Zakat Fund</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id provident voluptatem eaque autem, nemo nisi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet maiores neque exercitationem consequuntur. Maiores harum voluptatibus consequuntur sint delectus quod perspiciatis excepturi totam, illo repudiandae veritatis, rem magni recusandae enim.</p><a href="">Donate for Zakat</a>
+    </div>
+        </div>
+    </section>
+    <footer>
+        <h1>Eid Ul Adha</h1>
+        <p>I'm gonna do it.</p>
+        <p><small>Copyright </small>© <small>Hasan Chowdhuri</small></p>
+    </footer>
   
 </body>
 </html>
